--- a/config.json
+++ b/config.json
@@ -1,4 +1,7 @@
 {
 	"kafkaBroker": "localhost:9092",
 	"kafkaUploadTopic": "play-events"
+	"apiKeys": [
+		{ "name": "main-api-key", "value": "FdO8qePcl329prtN2QpexYdRa5fJhGbN" }
+	]
 }
