--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 	"kafkaBroker": "localhost:9092",
-	"kafkaUploadTopic": "play-events"
+	"kafkaUploadTopic": "play-events",
 	"apiKeys": [
 		{ "name": "main-api-key", "value": "FdO8qePcl329prtN2QpexYdRa5fJhGbN" }
 	]
